DB-6021: enable jdbc clients like sqlshell.sh and standalone server startup profiles for SSL mode